2026: Odissea nella nullità
Not even sure this is a good idea, why not