@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2025
+ * Copyright (c) 2026
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,12 +25,11 @@ import com.faendir.zachtronics.bot.repository.AbstractSolutionRepository;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Comparator;
 import java.util.List;
 import java.util.function.Function;
@@ -53,17 +52,17 @@ public class KzSolutionRepository extends AbstractSolutionRepository<KzCategory,
     private final List<KzPuzzle> trackedPuzzles = List.of(KzPuzzle.values());
 
     @Override
-    protected @NonNull String wikiPageName(KzPuzzle puzzle) {
+    protected String wikiPageName(@Nullable KzPuzzle puzzle) {
         return "index";
     }
 
     @Override
-    protected KzSolution makeCandidateSolution(@NonNull KzSubmission submission) {
+    protected KzSolution makeCandidateSolution(KzSubmission submission) {
         return new KzSolution(submission.getScore(), submission.getAuthor(), submission.getDisplayLink());
     }
 
     @Override
-    protected int frontierCompare(@NonNull KzScore s1, @NonNull KzScore s2) {
+    protected int frontierCompare(KzScore s1, KzScore s2) {
         int r1 = Integer.compare(s1.getTime(), s2.getTime());
         int r2 = Integer.compare(s1.getCost(), s2.getCost());
         int r3 = Integer.compare(s1.getArea(), s2.getArea());
@@ -83,31 +82,27 @@ public class KzSolutionRepository extends AbstractSolutionRepository<KzCategory,
     }
 
     @Override
-    protected boolean allowedSameScoreUpdate(@NonNull KzSolution candidate, @NonNull KzSolution solution) {
+    protected boolean allowedSameScoreUpdate(KzSolution candidate, KzSolution solution) {
         return candidate.getDisplayLink() != null ||
                (candidate.getAuthor().equals(solution.getAuthor()) && solution.getDisplayLink() == null);
     }
 
     @Override
-    @NonNull
-    protected Path relativePuzzlePath(@NonNull KzPuzzle puzzle) {
-        return Paths.get(puzzle.getGroup().name()).resolve(puzzle.name());
+    protected Path relativePuzzlePath(KzPuzzle puzzle) {
+        return Path.of(puzzle.getGroup().name()).resolve(puzzle.name());
     }
 
-    @NonNull
-    static String makeFilename(@NonNull KzPuzzle puzzle, @NonNull KzScore score) {
+    static String makeFilename(KzPuzzle puzzle, KzScore score) {
         return puzzle.getPrefix() + "-" + score.toDisplayString(DisplayContext.fileName()) + ".solution";
     }
 
-    @NonNull
     @Override
-    protected String makeArchiveLink(@NonNull KzPuzzle puzzle, @NonNull KzScore score) {
+    protected String makeArchiveLink(KzPuzzle puzzle, KzScore score) {
         return makeArchiveLink(puzzle, makeFilename(puzzle, score));
     }
 
     @Override
-    @NonNull
-    protected Path makeArchivePath(@NonNull Path puzzlePath, KzScore score) {
+    protected Path makeArchivePath(Path puzzlePath, KzScore score) {
         KzPuzzle puzzle = KzPuzzle.valueOf(puzzlePath.getFileName().toString());
         return puzzlePath.resolve(makeFilename(puzzle, score));
     }
