@@ -33,7 +33,7 @@ import gnu.trove.set.TIntSet;
 import gnu.trove.set.hash.TIntHashSet;
 import lombok.SneakyThrows;
 import org.apache.commons.io.file.PathUtils;
-import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -44,7 +44,6 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.Predicate;
 
@@ -61,7 +60,7 @@ class TISAIRevolutionTest {
     @TestConfiguration
     static class RepositoryConfiguration {
         @Bean("tisRepository")
-        public static @NonNull GitRepository tisRepository(GitProperties gitProperties) {
+        public static GitRepository tisRepository(GitProperties gitProperties) {
             return TestConfigurationKt.readOnlyLocalClone("../tis100/leaderboard", gitProperties);
         }
     }
@@ -128,7 +127,7 @@ class TISAIRevolutionTest {
     static final String syntheticLabel = "&&";
     static final TISPuzzle startingPuzzle = TISPuzzle.SIGNAL_AMPLIFIER;
 
-    static final Path dumpPath = false ? Paths.get("/tmp/dump") : null;
+    static final @Nullable Path dumpPath = false ? Path.of("/tmp/dump") : null;
 
     private static int inputs = 0;
     private static int tries = 0;
@@ -264,7 +263,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genReplace(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr, int replAmount, String replaceStr) {
+    private void genReplace(TISSave save, TISPuzzle puzzle, String baseDescr, int replAmount, String replaceStr) {
         main:
         for (int replStart = 0; replStart + replAmount - 1 < save.getInstructions(); replStart++) {
             int codeCount = 0;
@@ -299,7 +298,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genSwap(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr, int swapSize, int swapDist) {
+    private void genSwap(TISSave save, TISPuzzle puzzle, String baseDescr, int swapSize, int swapDist) {
         for (int codeLineIdx = 0; codeLineIdx + swapSize + swapDist < save.getInstructions(); codeLineIdx++) {
             int codeCount = 0;
             List<TISLine> swappedLines = new ArrayList<>();
@@ -337,7 +336,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genDupe(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr, int dupeAmount, int dupeDistance) {
+    private void genDupe(TISSave save, TISPuzzle puzzle, String baseDescr, int dupeAmount, int dupeDistance) {
         for (int dupeStart = 0; dupeStart + dupeAmount + dupeDistance - 1 < save.getInstructions(); dupeStart++) {
             int codeCount = 0;
             StringBuilder data = new StringBuilder();
@@ -371,7 +370,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genRotateNodes(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr, int rotateAmount) {
+    private void genRotateNodes(TISSave save, TISPuzzle puzzle, String baseDescr, int rotateAmount) {
         Predicate<TISNode> isRotatable = n -> n.getCodeLines().size() > rotateAmount;
         long rotatableNodes = save.getNodes().stream().filter(isRotatable).count();
         int maxKey = 1 << rotatableNodes;
@@ -405,7 +404,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genJumpReplacer(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr, TISOperation newJump) {
+    private void genJumpReplacer(TISSave save, TISPuzzle puzzle, String baseDescr, TISOperation newJump) {
         for (int jumpPoint = 0; jumpPoint < TISSave.MAX_NODE_INSTR; jumpPoint++) {
             int foundLine = 0;
             boolean found = true;
@@ -507,7 +506,7 @@ class TISAIRevolutionTest {
             StringBuilder data = new StringBuilder();
             for (TISNode node: save.getNodes()) {
                 data.append('@').append(node.getId()).append('\n');
-                @NonNull List<TISLine> lines = node.getLines();
+                List<TISLine> lines = node.getLines();
                 linesLoop:
                 for (int i = 0; i < lines.size(); i++) {
                     TISLine line = lines.get(i);
@@ -556,7 +555,7 @@ class TISAIRevolutionTest {
             StringBuilder data = new StringBuilder();
             for (TISNode node: save.getNodes()) {
                 data.append('@').append(node.getId()).append('\n');
-                @NonNull List<TISLine> lines = node.getLines();
+                List<TISLine> lines = node.getLines();
                 linesLoop:
                 for (int i = 0; i < lines.size(); i++) {
                     TISLine line = lines.get(i);
@@ -659,7 +658,7 @@ class TISAIRevolutionTest {
             StringBuilder data = new StringBuilder();
             for (TISNode node: save.getNodes()) {
                 data.append('@').append(node.getId()).append('\n');
-                @NonNull List<TISLine> lines = node.getLines();
+                List<TISLine> lines = node.getLines();
                 linesLoop:
                 for (int i = 0; i < lines.size(); i++) {
                     TISLine line = lines.get(i);
@@ -716,7 +715,7 @@ class TISAIRevolutionTest {
             StringBuilder data = new StringBuilder();
             for (TISNode node: save.getNodes()) {
                 data.append('@').append(node.getId()).append('\n');
-                @NonNull List<TISLine> lines = node.getLines();
+                List<TISLine> lines = node.getLines();
                 linesLoop:
                 for (int i = 0; i < lines.size(); i++) {
                     TISLine line = lines.get(i);
@@ -869,7 +868,7 @@ class TISAIRevolutionTest {
         }
     }
 
-    private void genFuzzTries(@NonNull TISSave save, TISPuzzle puzzle, String baseDescr) {
+    private void genFuzzTries(TISSave save, TISPuzzle puzzle, String baseDescr) {
         SplittableRandom rng = new SplittableRandom();
         long nums = save.codeAsStream()
                         .filter(TISAIRevolutionTest::hasFuzzableArg).count();
@@ -898,18 +897,18 @@ class TISAIRevolutionTest {
         }
     }
 
-    private static boolean hasFuzzableArg(@NonNull TISLine line) {
+    private static boolean hasFuzzableArg(TISLine line) {
         return line.is(ADD, IMMEDIATE) || line.is(SUB, IMMEDIATE) || line.is(MOV, IMMEDIATE, ACC);
 //        return line.getPort1() == IMMEDIATE;
     }
 
-    private static void writeLabel(@NonNull StringBuilder data, @NonNull TISLine line) {
+    private static void writeLabel(StringBuilder data, TISLine line) {
         if (line.getLabel() != null)
             data.append(line.getLabel()).append(": ");
     }
 
     @SneakyThrows
-    private void submit(@NonNull CharSequence data, @NonNull TISPuzzle puzzle, String descr, String link) {
+    private void submit(CharSequence data, TISPuzzle puzzle, String descr, @Nullable String link) {
         tries++;
 
         String solution = data.toString().replaceFirst("\\s*$", "\n"); // ensure there is one and only one newline at the end
